workloads/routing/kibana/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-vs
  namespace: logging
spec:
  hosts:
  - kibana.growbin.app
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        # ECK 서비스: <kibana-name>-kb-http
        host: eco2-kibana-kb-http.logging.svc.cluster.local
        port:
          number: 5601
